[WGSL] discard keyword is not supported https://bugs.webkit.org/show_bug.cgi?id=261862 rdar://115823568

Reviewed by Mike Wyrzykowski.

Add support for discard statements according to the spec[1].

[1]: https://www.w3.org/TR/WGSL/#discard-statement

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseStatement):

Canonical link: https://commits.webkit.org/268258@main